crates/test-ui/ui/msg_send_super_not_classtype.stderr
error[E0277]: the trait bound `AnyObject: ClassType` is not satisfied
 --> ui/msg_send_super_not_classtype.rs
  |
  |     let _: () = unsafe { msg_send![super(obj), method] };
  |                          ----------------^^^----------
  |                          |               |
  |                          |               the trait `ClassType` is not implemented for `AnyObject`
  |                          required by a bound introduced by this call
  |
help: the following other types implement trait `ClassType`
 --> $WORKSPACE/crates/objc2/src/runtime/nsobject.rs
  |
  | unsafe impl ClassType for NSObject {
  | ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^ `NSObject`
  |
 ::: $WORKSPACE/crates/objc2/src/runtime/nsproxy.rs
  |
  | unsafe impl ClassType for NSProxy {
  | ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^ `__NSProxy`
note: required by a bound in `objc2::__macros::MsgSendSuper::send_super_message_static`
 --> $WORKSPACE/crates/objc2/src/__macros/msg_send/retained.rs
  |
  |     unsafe fn send_super_message_static<A: ConvertArguments>(
  |               ------------------------- required by a bound in this associated function
...
  |         Self::Inner: ClassType,
  |                      ^^^^^^^^^ required by this bound in `MsgSendSuper::send_super_message_static`

error[E0277]: the trait bound `AnyObject: ClassType` is not satisfied
 --> ui/msg_send_super_not_classtype.rs
  |
  |     let _: () = unsafe { msg_send![super(obj), method] };
  |                          ----------------^^^----------
  |                          |               |
  |                          |               the trait `ClassType` is not implemented for `AnyObject`
  |                          required by a bound introduced by this call
  |
help: the following other types implement trait `ClassType`
 --> $WORKSPACE/crates/objc2/src/runtime/nsobject.rs
  |
  | unsafe impl ClassType for NSObject {
  | ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^ `NSObject`
  |
 ::: $WORKSPACE/crates/objc2/src/runtime/nsproxy.rs
  |
  | unsafe impl ClassType for NSProxy {
  | ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^ `__NSProxy`
note: required by a bound in `objc2::__macros::MsgSendSuper::send_super_message_static`
 --> $WORKSPACE/crates/objc2/src/__macros/msg_send/retained.rs
  |
  |     unsafe fn send_super_message_static<A: ConvertArguments>(
  |               ------------------------- required by a bound in this associated function
...
  |         <Self::Inner as ClassType>::Super: ClassType,
  |                                            ^^^^^^^^^ required by this bound in `MsgSendSuper::send_super_message_static`
